# lofarsoft

./: .gitignore  CMakeLists.txt  CMakeOptions.cmake  CTestConfig.cmake  README  bootstrap  suicide.c  test
data/lofar/StaticMetaData/: AntennaSets.conf  Attenuation.conf  CMakeLists.txt  DE601-Attenuation.conf  DipoleModel.conf  RSPConnections.dat.tmpl  RSPDriver.conf.tmpl  SourceCatalog.conf  TBBDriver.conf.test  TBBDriver.conf.tmpl  createFiles
devel_common/: CMakeLists.txt  clean_sourcedirs  find_dublicates
devel_common/cmake/: AddPythonModule.cmake  BuildPackage.cmake  CMakeLists.txt  CMakeSettings.cmake  FindAERA.cmake  FindArmadillo.cmake  FindBlitz.cmake  FindBoost.cmake  FindCASA.cmake  FindCASACORE.cmake  FindCASApy.cmake  FindCFITSIO.cmake  FindCPGPLOT.cmake  FindCRTools.cmake  FindCUDAGPU.cmake  FindCppUnit.cmake  FindDAL.cmake  FindDAL1.cmake  FindFFTW.cmake  FindFFTW3.cmake  FindFFTW3static.cmake  FindG2C.cmake  FindGFortran.cmake  FindGIF.cmake  FindGLIB.cmake  FindGSL.cmake  FindGTK.cmake  FindGit.cmake  FindGlish.cmake  FindGlobus.cmake  FindHDF5.cmake  FindIPython.cmake  FindITPP.cmake  FindLAPACK.cmake  FindLOFAR.cmake  FindLibxml2.cmake  FindMPatrol.cmake  FindMathGL.cmake  FindMatlab.cmake  FindMatplotlib.cmake  (+72 more)
devel_common/fink/: blitz.info  mysql++.info  trac.info  validatePackage  wcs.info
devel_common/install_scripts/: CMakeLists.txt  aipsrc.patch  atlas.install  blitz++.install  boost.install  casa.install  casa.patch  casa.patch-linux_gnu  cfitsio.install  cmake.install  dokuwiki.install  lapack.install  makefile  pgplot.install  pgplot.patch  qt.install  rivet.install  rpfits.install  sofa.install  tcltk.install
devel_common/scripts/: CMakeLists.txt  bison.install  build_cmake  build_package.sh.in  casa.patch-linux_gnu  ccfits.install  cfitsio.install  clean_rebuild  cluster_install  create_package_dal  dokuwiki.install  doxygen_documentation  experimental-builds  experimental-builds.in  fftw.install  generate_documents  generate_doxygen  init.csh  init.sh  install_crtools  install_dal  install_doxygen.in  lapack.install  lusExperimentalBuilds.in  lusbuild.sh  makedefs.patch  newclass  nightly-builds.in  pgplot.install  pgplot.patch  process_backups  python.install  tcltk.install  update_casacore
devel_common/templates/: NewClass.cc  NewClass.h  tNewClass.cc
src/: CMakeLists.txt
src/Anaamika/: CMakeLists.txt  CTestConfig.cmake  README
src/Anaamika/anaamika/: .shapelets.py.swp  :w  Makefile  _anaamika.pyf  _fbdsm_sub1.pyf  _pyasso.pyf  _pytesselate.pyf  _stargaul.pyf  aa.f  anaamika.py  analysepsf1.f  arrstatmask.f  calcmedian4clip.f  call_qc_overlaygaussians.f  call_wcs_c2p.f  callgetpixel.f  callmrqmin2dm.f  calltest.f  callwriteshapfits.f  constants.inc  del1  erfc.f  files  fit_island.f  fit_mulgauss1.f  formislands.f  fort.21  fourn.f  g  gammp.f  gaul_to_source.f  geometry.py  get_beam_tile.f  get_fitskeywords.f  get_medianclip_vec.f  getpix11.f  gsm_calcflux_nofit.f  gsm_plotspectra.f  gsmb  hmm.f  (+58 more)
src/Anaamika/apps/: CMakeLists.txt
src/Anaamika/data/: test.py
src/Anaamika/doc/: anaamika_overview.doc  bdsm_docu.ps  code_tree.doc
src/Anaamika/implement/: CMakeLists.txt  Makefile  create.in  data
src/Anaamika/scripts/: FITS.py  __init__.py  collapse.py  create  fbdsm_fitstable_stuff.py  functions.py  gaul2srl.py  gausfit.py  image.py  islands.py  libs.py  make_residimage.py  makeparadefine  mylogger.py  opts.py  output.py  output_fbdsm_files.py  paradefine  plotresults.py  polarisation.py  preprocess.py  psf_vary.py  read_image.py  rmsimage.py  shapefit.py  shapelets.py  spectralindex.py  test_fit_gaus2d_mask.py  threshold.py  wavelet_atrous.py  wenssfiles
src/BDSM/: CMakeLists.txt  CTestConfig.cmake
src/BDSM/anaamika/: .psf_vary.py.swp  .smhist  NVSScondon.c2g.gaul  _py2fbdsm.pyf  aaa.py  addimages.f  aiparadefine  basicgrey.f  batchparadefine  bin_and_stats_ny.f  blah.f  boxf.f  boxnoiseimage.f  calc_gsm.f  d.f  (+119 more)
src/CR-Pipeline/: CMakeLists.txt
src/CR-Tools/: CMakeLists.txt  CTestConfig.cmake  crtools.h.in
src/DAL/: CMakeLists.txt  dal-0.1.0.tgz  dal.cmake.in  dal.tgz
src/DSP/: CMakeLists.txt
src/FRATS/: CMakeLists.txt  CoincidenceDetectionUDP.cc  FRATSdedisperse.cc  FRATStestRFI.cc  FRATStrigger.cc  FRATcoincidence.cc  FRATcoincidence.h  TransientTriggerV11.cc  writetriggermessages.cc
src/LASA/: .Makefile.arch.swo  .Makefile.swo  CLASS_Device.h  CLASS_Sockets.h  CMakeLists.txt  Constants.h  Data_Processing.h  FUNCTION_Device.h  FUNCTION_Sockets.h  Get_Data.h  Global_Variables.h  Hisparc_Trigger_Condition.h  Makefile  Read_Detector_Cord.h  arrival_direction.cxx  arrival_direction.h  ex2aDict.cxx  ex2aDict.h  lasa.root  main_program.cxx  monitoring.cxx  monitoring.h  start_dwingeloo  start_lasa
src/LOPES-Tools/: CMakeLists.txt  CMakeLists.txt.mine  CMakeLists.txt.r110
src/LopesTools/: CMakeLists.txt
src/Pulsar/: CMakeLists.txt  CTestConfig.cmake  README
src/PyBDSM/: CMakeLists.txt  CTestConfig.cmake
src/PyCRTools/: CHANGELOG.rst  CMakeLists.txt  CTestConfig.cmake  DefaultCoeffLBA.cc  ElementResponse.cc  cleancompile  compile  core.cc  core.h  hfppnew.h  legacy.cc  legacy.h  mArray.cc  mArray.h  mBindings.cc  mBindings.h  mCalibration.cc  mCalibration.h  mEndPointRadiation.cc  mEndPointRadiation.h  mFFT.cc  mFFT.h  mFFTW.cc  mFFTW.h  mFilter.cc  mFilter.h  mFitting.cc  mFitting.h  mIO.cc  mIO.h  mImaging.cc  mImaging.h  mMath.cc  mMath.h  mModule.h  mRF.cc  mRF.h  mTBB.cc  mTBB.h  mVector.cc  (+2 more)
src/RM/: CMakeLists.txt  CTestConfig.cmake  Leiden_GEETEE_CS1_1.FITS  fits.cpp  fits.h  main.cpp  rm.cmake.in  rm.cpp  rm.h  rmCube.cpp  rmCube.h
src/TMF/: CMakeLists.txt
src/Timba/: CMakeLists.txt
src/VLT/: CMakeLists.txt
src/contrib/: CMakeLists.txt  README
src/dynspec/: README.txt  downsample.py  specview.py
src/pipeline/: .gitignore  CMakeLists.txt  Doxyfile  InputFilter  Makefile.am  README  WSRTrecipe.py  bootstrap  configure.in  cook.py  mac-sip.py  package.dox  pipeline.cfg  setup.py  sip.py  sip.sh
src/pybdsm/: CMakeLists.txt  CTestConfig.cmake  TODO  test.py
src/smosaic/: CMakeLists.txt
(+5975 files in other folders)
